--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,10 @@ permissions:
   contents: read
 
 on:
-  push:
+  pull_request:
+    types:
+      - opened
+      - reopened
     branches:
       - master
       - main
