--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,3 +1,4 @@
+---
 name: Release
 
 permissions:
@@ -6,8 +7,8 @@ permissions:
 
 on:
   release:
-    types: 
-      - created
+    types:
+      - published
 
 jobs:
   release:
@@ -26,7 +27,6 @@ jobs:
           - goos: windows
             goarch: ""
     steps:
-
       - uses: actions/checkout@v3
         name: Checkout repository
 
@@ -41,13 +41,12 @@ jobs:
           build_flags: -v
           extra_files: LICENSE README.md
           sha256sum: TRUE
-      
+
   update:
     needs: release
     name: update krew-index
     runs-on: "ubuntu-latest"
     steps:
-
       - uses: actions/checkout@v3
         name: Checkout repository
 
