--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,3 +1,4 @@
+---
 name: Test
 
 permissions:
@@ -19,20 +20,19 @@ jobs:
     name: Lint/Test
     runs-on: "ubuntu-latest"
     steps:
-
       - uses: actions/checkout@v3
         name: Checkout repository
 
       - uses: actions/setup-go@v3
         name: Setup go environment
         with:
-          go-version: '1.19'
+          go-version: "1.19"
 
       - uses: golangci/golangci-lint-action@v3
         name: Run golangci-lint
         with:
-          version: 'latest'
+          version: "latest"
           args: --timeout=2m --verbose
-          
+
       - name: Run GO tests
-        run: go test -v ./pkg/helpers
+        run: go test -v ./...
