--- a/.github/workflows/lint_test.yaml
+++ b/.github/workflows/lint_test.yaml
@@ -1,9 +1,7 @@
 ---
-name: Test
-
+name: Test and Lint
 permissions:
   contents: read
-
 on:
   pull_request:
     types:
@@ -14,25 +12,25 @@ on:
     branches:
       - master
       - main
-
+    paths:
+      - '**.go'
 jobs:
   test:
-    name: Lint/Test
+    name: lint/test
     runs-on: "ubuntu-latest"
     steps:
-      - uses: actions/checkout@v3
-        name: Checkout repository
 
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v4
+        name: Checkout repository
+      - uses: actions/setup-go@v4
         name: Setup go environment
         with:
-          go-version: "1.19"
+          go-version: "1.20"
 
+      - name: Run tests
+        run: go test -v ./...
       - uses: golangci/golangci-lint-action@v3
         name: Run golangci-lint
         with:
           version: "latest"
           args: --timeout=2m --verbose
-
-      - name: Run GO tests
-        run: go test -v ./...
