--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,7 +22,7 @@ jobs:
           go-version: "1.20"
       - name: Install GoReleaser
         run: |
-          curl -sfL https://goreleaser.com/static/run | bash
+          go install github.com/goreleaser/goreleaser@latest
 
       - name: Build libraries
         run: |
