--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,8 +21,9 @@ jobs:
         with:
           go-version: "1.20"
       - name: Install GoReleaser
-        run: |
-          go install github.com/goreleaser/goreleaser@latest
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          install-only: true
 
       - name: Build libraries
         run: |
