--- a/.github/workflows/lint_test.yaml
+++ b/.github/workflows/lint_test.yaml
@@ -26,9 +26,11 @@ jobs:
         with:
           go-version: "1.24"
       - name: Install GoReleaser
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         with:
           install-only: true
+          version: "~> v2"
+
       - name: Run tests
         run: go test -v ./...
       - name: Run golangci-lint
