--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,14 +14,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         name: Checkout repository
-      - uses: actions/setup-go@v4
+      - uses: actions/setup-go@v5
         name: Setup go environment
         with:
           go-version: "1.24"
       - name: Install GoReleaser
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         with:
           install-only: true
+          version: "~> v2"
 
       - name: Build libraries
         run: |
